# agent-gate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  install.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
Formula/: agentgate.rb
crates/agentgate-cli/: Cargo.toml
crates/agentgate-cli/src/: main.rs
crates/agentgate-core/: Cargo.toml
crates/agentgate-core/benches/: proxy_eval.rs
crates/agentgate-core/src/: config.rs  lib.rs  metrics.rs
crates/agentgate-core/src/dashboard/: api.rs  mod.rs  server.rs  state.rs  ws.rs
crates/agentgate-core/src/logging/: structured.rs
crates/agentgate-core/src/policy/: condition.rs  engine.rs
crates/agentgate-core/src/protocol/: jsonrpc.rs  mcp.rs  mod.rs
crates/agentgate-core/src/proxy/: evaluation.rs  http.rs  sse.rs  stdio.rs
crates/agentgate-core/src/ratelimit/: circuit_breaker.rs  limiter.rs
crates/agentgate-core/src/storage/: mod.rs  sqlite.rs
crates/agentgate-core/tests/: policy_proptest.rs
dashboard/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/activity/: page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/violations/: page.tsx
dashboard/src/components/: InvocationsTable.tsx  KpiCard.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/src/lib/: api.ts  auth.ts  types.ts
docs/: agentgate.1
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_jsonrpc_parse.rs  fuzz_policy_condition.rs
policies/: default.toml
tests/integration/: http_proxy_test.rs  security_test.rs  stdio_proxy_test.rs
