[package]
name = "agentgate-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
agentgate-core = { path = "../crates/agentgate-core" }
serde_json = "1"

# Fuzz targets are separate binaries so they don't appear in the main workspace build.
[[bin]]
name = "fuzz_jsonrpc_parse"
path = "fuzz_targets/fuzz_jsonrpc_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_policy_condition"
path = "fuzz_targets/fuzz_policy_condition.rs"
test = false
doc = false
