[package]
name = "agentgate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentgate"
path = "src/main.rs"

[dependencies]
agentgate-core = { path = "../agentgate-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tabled = { workspace = true }
chrono = { workspace = true }

[[test]]
name = "stdio_proxy_test"
path = "../../tests/integration/stdio_proxy_test.rs"

[[test]]
name = "http_proxy_test"
path = "../../tests/integration/http_proxy_test.rs"

[[test]]
name = "security_test"
path = "../../tests/integration/security_test.rs"

[dev-dependencies]
toml = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
agentgate-core = { path = "../agentgate-core" }
