[package]
name = "agentgate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
prometheus = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }

[[bench]]
name = "proxy_eval"
harness = false

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
